syntax = "proto3";

package trading.order.v1;

option go_package = "order-gateway/pkg/pb/trading/order/v1;orderpb";
option java_multiple_files = true;
option java_package = "com.trador.order.v1";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// OrderService defines the gRPC boundary for the canonical order database.
service OrderService {
  // CreateOrder issues a new order and persists it via api.create_order.
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);

  // AddOrderFill records a venue fill and updates order aggregates via api.add_order_fill.
  rpc AddOrderFill(AddOrderFillRequest) returns (AddOrderFillResponse);

  // UpdateOrderLifecycle advances an order through its lifecycle using api.update_order_lifecycle.
  rpc UpdateOrderLifecycle(UpdateOrderLifecycleRequest)
      returns (UpdateOrderLifecycleResponse);

  // GetOrder retrieves the latest order snapshot.
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);

  // ListOrderFills streams fills for a specific order in executed_at order.
  rpc ListOrderFills(ListOrderFillsRequest) returns (ListOrderFillsResponse);
}

// Request/response messages ---------------------------------------------------

message CreateOrderRequest {
  int32 strategy_id = 1;
  google.protobuf.Int32Value source_network_id = 2;
  google.protobuf.Int32Value dest_network_id = 3;
  string adapter_key = 4;
  string idempotency_key = 5;
  string asset_in_ref = 6;
  string asset_out_ref = 7;
  OrderSide side = 8;
  OrderType type = 9;
  TimeInForce tif = 10;
  bool reduce_only = 11;
  bool post_only = 12;
  string leverage = 13;
  MarginMode margin_mode = 14;
  string amount_in = 15;
  google.protobuf.StringValue amount_out_min = 16;
  google.protobuf.StringValue limit_price = 17;
  google.protobuf.StringValue stop_price = 18;
  google.protobuf.StringValue slippage_tolerance = 19;
  repeated string tags = 20;
  google.protobuf.Struct metadata = 21;
  google.protobuf.Struct execution_preferences = 22;
}

message CreateOrderResponse {
  Order order = 1;
}

message AddOrderFillRequest {
  string order_id = 1;
  string idempotency_key = 2;
  string amount_in = 3;
  string amount_out = 4;
  string price = 5;
  google.protobuf.StringValue fee_amount = 6;
  google.protobuf.StringValue fee_asset_ref = 7;
  google.protobuf.StringValue adapter_key = 8;
  bytes tx_hash = 9;
  google.protobuf.Int64Value block_number = 10;
  google.protobuf.Int32Value log_index = 11;
  TransactionStatus status = 12;
}

message AddOrderFillResponse {
  OrderFill fill = 1;
  Order order = 2;
}

message UpdateOrderLifecycleRequest {
  string order_id = 1;
  OrderStatus new_status = 2;
  google.protobuf.Timestamp triggered_at = 3;
  google.protobuf.Timestamp completed_at = 4;
  google.protobuf.Struct metadata = 5;
}

message UpdateOrderLifecycleResponse {
  Order order = 1;
}

message GetOrderRequest {
  string order_id = 1;
}

message GetOrderResponse {
  Order order = 1;
  repeated OrderFill fills = 2;
}

message ListOrderFillsRequest {
  string order_id = 1;
  google.protobuf.Timestamp executed_after = 2;
  int32 page_size = 3;
  bytes page_token = 4;
}

message ListOrderFillsResponse {
  repeated OrderFill fills = 1;
  bytes next_page_token = 2;
}

// Entity messages -------------------------------------------------------------

message Order {
  string id = 1;
  int32 strategy_id = 2;
  google.protobuf.Int32Value source_network_id = 3;
  google.protobuf.Int32Value dest_network_id = 4;
  string adapter_key = 5;
  string idempotency_key = 6;
  string asset_in_ref = 7;
  string asset_out_ref = 8;
  OrderSide side = 9;
  OrderType type = 10;
  TimeInForce tif = 11;
  bool reduce_only = 12;
  bool post_only = 13;
  google.protobuf.StringValue leverage = 14;
  MarginMode margin_mode = 15;
  string amount_in = 16;
  google.protobuf.StringValue amount_out_min = 17;
  string filled_amount = 18;
  google.protobuf.StringValue limit_price = 19;
  google.protobuf.StringValue stop_price = 20;
  google.protobuf.StringValue average_fill_price = 21;
  google.protobuf.StringValue slippage_tolerance = 22;
  OrderStatus status = 23;
  int64 version = 24;
  int64 event_version = 25;
  google.protobuf.Timestamp created_at = 26;
  google.protobuf.Timestamp submitted_at = 27;
  google.protobuf.Timestamp acked_at = 28;
  google.protobuf.Timestamp updated_at = 29;
  google.protobuf.Timestamp triggered_at = 30;
  google.protobuf.Timestamp completed_at = 31;
  google.protobuf.Timestamp expired_at = 32;
  google.protobuf.Timestamp canceled_at = 33;
  repeated string tags = 34;
  google.protobuf.Struct metadata = 35;
  google.protobuf.Struct execution_preferences = 36;
}

message OrderFill {
  string id = 1;
  string order_id = 2;
  string idempotency_key = 3;
  string amount_in = 4;
  string amount_out = 5;
  string price = 6;
  google.protobuf.StringValue fee_amount = 7;
  google.protobuf.StringValue fee_asset_ref = 8;
  string adapter_key = 9;
  bytes tx_hash = 10;
  google.protobuf.Int64Value block_number = 11;
  google.protobuf.Int32Value log_index = 12;
  TransactionStatus status = 13;
  google.protobuf.Timestamp confirmed_at = 14;
  google.protobuf.Timestamp reverted_at = 15;
  google.protobuf.Timestamp executed_at = 16;
}

// Enumerations ----------------------------------------------------------------

enum OrderSide {
  ORDER_SIDE_UNSPECIFIED = 0;
  ORDER_SIDE_BUY = 1;
  ORDER_SIDE_SELL = 2;
}

enum OrderType {
  ORDER_TYPE_UNSPECIFIED = 0;
  ORDER_TYPE_MARKET = 1;
  ORDER_TYPE_LIMIT = 2;
  ORDER_TYPE_STOP = 3;
  ORDER_TYPE_STOP_LIMIT = 4;
  ORDER_TYPE_TWAP = 5;
  ORDER_TYPE_DCA = 6;
  ORDER_TYPE_SCALE = 7;
  ORDER_TYPE_TRAILING_STOP = 8;
}

enum TimeInForce {
  TIME_IN_FORCE_UNSPECIFIED = 0;
  TIME_IN_FORCE_GTC = 1;
  TIME_IN_FORCE_IOC = 2;
  TIME_IN_FORCE_FOK = 3;
  TIME_IN_FORCE_GTD = 4;
}

enum MarginMode {
  MARGIN_MODE_UNSPECIFIED = 0;
  MARGIN_MODE_CROSS = 1;
  MARGIN_MODE_ISOLATED = 2;
}

enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_PENDING = 1;
  ORDER_STATUS_OPEN = 2;
  ORDER_STATUS_PARTIALLY_FILLED = 3;
  ORDER_STATUS_FILLED = 4;
  ORDER_STATUS_CANCELLED = 5;
  ORDER_STATUS_REJECTED = 6;
  ORDER_STATUS_EXPIRED = 7;
}

enum TransactionStatus {
  TRANSACTION_STATUS_UNSPECIFIED = 0;
  TRANSACTION_STATUS_PENDING = 1;
  TRANSACTION_STATUS_CONFIRMED = 2;
  TRANSACTION_STATUS_FAILED = 3;
  TRANSACTION_STATUS_REVERTED = 4;
}
